parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> translation_unit
Rule 1     primary_expression -> IDENTIFIER
Rule 2     primary_expression -> CONSTANT
Rule 3     primary_expression -> STRING_LITERAL
Rule 4     primary_expression -> L_BRACKET expression R_BRACKET
Rule 5     postfix_expression -> primary_expression
Rule 6     postfix_expression -> postfix_expression L_BRACE expression R_BRACE
Rule 7     postfix_expression -> postfix_expression L_BRACKET R_BRACKET
Rule 8     postfix_expression -> postfix_expression L_BRACKET argument_expression_list R_BRACKET
Rule 9     postfix_expression -> postfix_expression POINT IDENTIFIER
Rule 10    postfix_expression -> postfix_expression PTR_OP IDENTIFIER
Rule 11    postfix_expression -> postfix_expression INC_OP
Rule 12    postfix_expression -> postfix_expression DEC_OP
Rule 13    argument_expression_list -> assignment_expression
Rule 14    argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 15    unary_expression -> postfix_expression
Rule 16    unary_expression -> INC_OP unary_expression
Rule 17    unary_expression -> DEC_OP unary_expression
Rule 18    unary_expression -> unary_operator cast_expression
Rule 19    unary_expression -> SIZEOF unary_expression
Rule 20    unary_expression -> SIZEOF L_BRACKET type_name R_BRACKET
Rule 21    unary_operator -> AND
Rule 22    unary_operator -> TIMES
Rule 23    unary_operator -> PLUS
Rule 24    unary_operator -> MINUS
Rule 25    unary_operator -> TILD
Rule 26    unary_operator -> NOT
Rule 27    cast_expression -> unary_expression
Rule 28    cast_expression -> L_BRACKET type_name R_BRACKET cast_expression
Rule 29    multiplicative_expression -> cast_expression
Rule 30    multiplicative_expression -> multiplicative_expression TIMES cast_expression
Rule 31    multiplicative_expression -> multiplicative_expression DIVIDE cast_expression
Rule 32    multiplicative_expression -> multiplicative_expression MOD cast_expression
Rule 33    additive_expression -> multiplicative_expression
Rule 34    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 35    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 36    shift_expression -> additive_expression
Rule 37    shift_expression -> shift_expression LEFT_OP additive_expression
Rule 38    shift_expression -> shift_expression RIGHT_OP additive_expression
Rule 39    relational_expression -> shift_expression
Rule 40    relational_expression -> relational_expression INF shift_expression
Rule 41    relational_expression -> relational_expression SUP shift_expression
Rule 42    relational_expression -> relational_expression LE_OP shift_expression
Rule 43    relational_expression -> relational_expression GE_OP shift_expression
Rule 44    equality_expression -> relational_expression
Rule 45    equality_expression -> equality_expression EQ_OP relational_expression
Rule 46    equality_expression -> equality_expression NE_OP relational_expression
Rule 47    and_expression -> equality_expression
Rule 48    and_expression -> and_expression AND equality_expression
Rule 49    exclusive_or_expression -> and_expression
Rule 50    exclusive_or_expression -> exclusive_or_expression EXOR and_expression
Rule 51    inclusive_or_expression -> exclusive_or_expression
Rule 52    inclusive_or_expression -> inclusive_or_expression OR exclusive_or_expression
Rule 53    logical_and_expression -> inclusive_or_expression
Rule 54    logical_and_expression -> logical_and_expression AND_OP inclusive_or_expression
Rule 55    logical_or_expression -> logical_and_expression
Rule 56    logical_or_expression -> logical_or_expression OR_OP logical_and_expression
Rule 57    conditional_expression -> logical_or_expression
Rule 58    conditional_expression -> logical_or_expression INTER expression COLON conditional_expression
Rule 59    assignment_expression -> conditional_expression
Rule 60    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 61    assignment_operator -> EQUALS
Rule 62    assignment_operator -> MUL_ASSIGN
Rule 63    assignment_operator -> DIV_ASSIGN
Rule 64    assignment_operator -> MOD_ASSIGN
Rule 65    assignment_operator -> ADD_ASSIGN
Rule 66    assignment_operator -> SUB_ASSIGN
Rule 67    assignment_operator -> LEFT_ASSIGN
Rule 68    assignment_operator -> RIGHT_ASSIGN
Rule 69    assignment_operator -> AND_ASSIGN
Rule 70    assignment_operator -> XOR_ASSIGN
Rule 71    assignment_operator -> OR_ASSIGN
Rule 72    expression -> assignment_expression
Rule 73    expression -> expression COMMA assignment_expression
Rule 74    constant_expression -> conditional_expression
Rule 75    declaration -> declaration_specifiers SEMICOLON
Rule 76    declaration -> declaration_specifiers init_declarator_list SEMICOLON
Rule 77    declaration_specifiers -> storage_class_specifier
Rule 78    declaration_specifiers -> storage_class_specifier declaration_specifiers
Rule 79    declaration_specifiers -> type_specifier
Rule 80    declaration_specifiers -> type_specifier declaration_specifiers
Rule 81    declaration_specifiers -> type_qualifier
Rule 82    declaration_specifiers -> type_qualifier declaration_specifiers
Rule 83    init_declarator_list -> init_declarator
Rule 84    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 85    init_declarator -> declarator
Rule 86    init_declarator -> declarator EQUALS initializer
Rule 87    storage_class_specifier -> TYPEDEF
Rule 88    storage_class_specifier -> EXTERN
Rule 89    storage_class_specifier -> STATIC
Rule 90    storage_class_specifier -> AUTO
Rule 91    storage_class_specifier -> REGISTER
Rule 92    type_specifier -> VOID
Rule 93    type_specifier -> CHAR
Rule 94    type_specifier -> SHORT
Rule 95    type_specifier -> INT
Rule 96    type_specifier -> LONG
Rule 97    type_specifier -> BOOL
Rule 98    type_specifier -> FLOAT
Rule 99    type_specifier -> DOUBLE
Rule 100   type_specifier -> SIGNED
Rule 101   type_specifier -> UNSIGNED
Rule 102   type_specifier -> struct_or_union_specifier
Rule 103   type_specifier -> enum_specifier
Rule 104   struct_or_union_specifier -> struct_or_union IDENTIFIER L_BRACE struct_declaration_list R_BRACE
Rule 105   struct_or_union_specifier -> struct_or_union L_BRACE struct_declaration_list R_BRACE
Rule 106   struct_or_union_specifier -> struct_or_union IDENTIFIER
Rule 107   struct_or_union -> STRUCT
Rule 108   struct_or_union -> UNION
Rule 109   struct_declaration_list -> struct_declaration
Rule 110   struct_declaration_list -> struct_declaration_list struct_declaration
Rule 111   struct_declaration -> specifier_qualifier_list struct_declarator_list SEMICOLON
Rule 112   specifier_qualifier_list -> type_specifier specifier_qualifier_list
Rule 113   specifier_qualifier_list -> type_specifier
Rule 114   specifier_qualifier_list -> type_qualifier specifier_qualifier_list
Rule 115   specifier_qualifier_list -> type_qualifier
Rule 116   struct_declarator_list -> struct_declarator
Rule 117   struct_declarator_list -> struct_declarator_list COMMA struct_declarator
Rule 118   struct_declarator -> declarator
Rule 119   struct_declarator -> COLON constant_expression
Rule 120   struct_declarator -> declarator COLON constant_expression
Rule 121   enum_specifier -> ENUM L_BRACE enumerator_list R_BRACE
Rule 122   enum_specifier -> ENUM IDENTIFIER L_BRACE enumerator_list R_BRACE
Rule 123   enum_specifier -> ENUM IDENTIFIER
Rule 124   enumerator_list -> enumerator
Rule 125   enumerator_list -> enumerator_list COMMA enumerator
Rule 126   enumerator -> IDENTIFIER
Rule 127   enumerator -> IDENTIFIER EQUALS constant_expression
Rule 128   type_qualifier -> CONST
Rule 129   type_qualifier -> VOLATILE
Rule 130   declarator -> pointer direct_declarator
Rule 131   declarator -> direct_declarator
Rule 132   direct_declarator -> IDENTIFIER
Rule 133   direct_declarator -> L_BRACKET declarator R_BRACKET
Rule 134   direct_declarator -> direct_declarator L_HOOK constant_expression R_HOOK
Rule 135   direct_declarator -> direct_declarator L_HOOK R_HOOK
Rule 136   direct_declarator -> direct_declarator L_BRACKET parameter_type_list R_BRACKET
Rule 137   direct_declarator -> direct_declarator L_BRACKET identifier_list R_BRACKET
Rule 138   direct_declarator -> direct_declarator L_BRACKET R_BRACKET
Rule 139   pointer -> TIMES
Rule 140   pointer -> TIMES type_qualifier_list
Rule 141   pointer -> TIMES pointer
Rule 142   pointer -> TIMES type_qualifier_list pointer
Rule 143   type_qualifier_list -> type_qualifier
Rule 144   type_qualifier_list -> type_qualifier_list type_qualifier
Rule 145   parameter_type_list -> parameter_list
Rule 146   parameter_type_list -> parameter_list COMMA ELLIPSIS
Rule 147   parameter_list -> parameter_declaration
Rule 148   parameter_list -> parameter_list COMMA parameter_declaration
Rule 149   parameter_declaration -> declaration_specifiers declarator
Rule 150   parameter_declaration -> declaration_specifiers abstract_declarator
Rule 151   parameter_declaration -> declaration_specifiers
Rule 152   identifier_list -> IDENTIFIER
Rule 153   identifier_list -> identifier_list COMMA IDENTIFIER
Rule 154   type_name -> specifier_qualifier_list
Rule 155   type_name -> specifier_qualifier_list abstract_declarator
Rule 156   abstract_declarator -> pointer
Rule 157   abstract_declarator -> direct_abstract_declarator
Rule 158   abstract_declarator -> pointer direct_abstract_declarator
Rule 159   direct_abstract_declarator -> L_BRACKET abstract_declarator R_BRACKET
Rule 160   direct_abstract_declarator -> L_HOOK R_HOOK
Rule 161   direct_abstract_declarator -> L_HOOK constant_expression R_HOOK
Rule 162   direct_abstract_declarator -> direct_abstract_declarator L_HOOK R_HOOK
Rule 163   direct_abstract_declarator -> direct_abstract_declarator L_HOOK constant_expression R_HOOK
Rule 164   direct_abstract_declarator -> L_BRACKET R_BRACKET
Rule 165   direct_abstract_declarator -> L_BRACKET parameter_type_list R_BRACKET
Rule 166   direct_abstract_declarator -> direct_abstract_declarator L_BRACKET R_BRACKET
Rule 167   direct_abstract_declarator -> direct_abstract_declarator L_BRACKET parameter_type_list R_BRACKET
Rule 168   initializer -> assignment_expression
Rule 169   initializer -> L_BRACE initializer_list R_BRACE
Rule 170   initializer -> L_BRACE initializer_list COMMA R_BRACE
Rule 171   initializer_list -> initializer
Rule 172   initializer_list -> initializer_list COMMA initializer
Rule 173   statement -> labeled_statement
Rule 174   statement -> compound_statement
Rule 175   statement -> expression_statement
Rule 176   statement -> selection_statement
Rule 177   statement -> iteration_statement
Rule 178   statement -> jump_statement
Rule 179   labeled_statement -> IDENTIFIER COLON statement
Rule 180   labeled_statement -> CASE constant_expression COLON statement
Rule 181   labeled_statement -> DEFAULT COLON statement
Rule 182   compound_statement -> L_BRACE R_BRACE
Rule 183   compound_statement -> L_BRACE statement_list R_BRACE
Rule 184   compound_statement -> L_BRACE declaration_list R_BRACE
Rule 185   compound_statement -> L_BRACE declaration_list statement_list R_BRACE
Rule 186   declaration_list -> declaration
Rule 187   declaration_list -> declaration_list declaration
Rule 188   statement_list -> statement
Rule 189   statement_list -> statement_list statement
Rule 190   expression_statement -> SEMICOLON
Rule 191   expression_statement -> expression SEMICOLON
Rule 192   selection_statement -> IF L_BRACKET expression R_BRACKET statement
Rule 193   selection_statement -> IF L_BRACKET expression R_BRACKET statement ELSE statement
Rule 194   selection_statement -> SWITCH L_BRACKET expression R_BRACKET statement
Rule 195   iteration_statement -> WHILE L_BRACKET expression R_BRACKET statement
Rule 196   iteration_statement -> DO statement WHILE L_BRACKET expression R_BRACKET SEMICOLON
Rule 197   iteration_statement -> FOR L_BRACKET expression_statement expression_statement R_BRACKET statement
Rule 198   iteration_statement -> FOR L_BRACKET expression_statement expression_statement expression R_BRACKET statement
Rule 199   jump_statement -> GOTO IDENTIFIER SEMICOLON
Rule 200   jump_statement -> CONTINUE SEMICOLON
Rule 201   jump_statement -> BREAK SEMICOLON
Rule 202   jump_statement -> RETURN SEMICOLON
Rule 203   jump_statement -> RETURN expression SEMICOLON
Rule 204   translation_unit -> external_declaration
Rule 205   translation_unit -> translation_unit external_declaration
Rule 206   external_declaration -> function_definition
Rule 207   external_declaration -> declaration
Rule 208   function_definition -> declaration_specifiers declarator declaration_list compound_statement
Rule 209   function_definition -> declaration_specifiers declarator compound_statement
Rule 210   function_definition -> declarator declaration_list compound_statement
Rule 211   function_definition -> declarator compound_statement

Terminals, with rules where they appear

ADD_ASSIGN           : 65
AND                  : 21 48
AND_ASSIGN           : 69
AND_OP               : 54
AUTO                 : 90
BOOL                 : 97
BREAK                : 201
CASE                 : 180
CHAR                 : 93
COLON                : 58 119 120 179 180 181
COMMA                : 14 73 84 117 125 146 148 153 170 172
COMMENT              : 
CONST                : 128
CONSTANT             : 2
CONTINUE             : 200
DEC_OP               : 12 17
DEFAULT              : 181
DIVIDE               : 31
DIV_ASSIGN           : 63
DO                   : 196
DOUBLE               : 99
ELLIPSIS             : 146
ELSE                 : 193
ENUM                 : 121 122 123
EQUALS               : 61 86 127
EQ_OP                : 45
EXOR                 : 50
EXTERN               : 88
FLOAT                : 98
FOR                  : 197 198
GE_OP                : 43
GOTO                 : 199
IDENTIFIER           : 1 9 10 104 106 122 123 126 127 132 152 153 179 199
IF                   : 192 193
INC_OP               : 11 16
INF                  : 40
INT                  : 95
INTER                : 58
LEFT_ASSIGN          : 67
LEFT_OP              : 37
LE_OP                : 42
LONG                 : 96
L_BRACE              : 6 104 105 121 122 169 170 182 183 184 185
L_BRACKET            : 4 7 8 20 28 133 136 137 138 159 164 165 166 167 192 193 194 195 196 197 198
L_HOOK               : 134 135 160 161 162 163
MINUS                : 24 35
MOD                  : 32
MOD_ASSIGN           : 64
MUL_ASSIGN           : 62
NE_OP                : 46
NOT                  : 26
OR                   : 52
OR_ASSIGN            : 71
OR_OP                : 56
PLUS                 : 23 34
POINT                : 9
PTR_OP               : 10
REGISTER             : 91
RETURN               : 202 203
RIGHT_ASSIGN         : 68
RIGHT_OP             : 38
R_BRACE              : 6 104 105 121 122 169 170 182 183 184 185
R_BRACKET            : 4 7 8 20 28 133 136 137 138 159 164 165 166 167 192 193 194 195 196 197 198
R_HOOK               : 134 135 160 161 162 163
SEMICOLON            : 75 76 111 190 191 196 199 200 201 202 203
SHORT                : 94
SIGNED               : 100
SIZEOF               : 19 20
STATIC               : 89
STRING_LITERAL       : 3
STRUCT               : 107
SUB_ASSIGN           : 66
SUP                  : 41
SWITCH               : 194
TILD                 : 25
TIMES                : 22 30 139 140 141 142
TYPEDEF              : 87
UNION                : 108
UNSIGNED             : 101
VOID                 : 92
VOLATILE             : 129
WHILE                : 195 196
XOR_ASSIGN           : 70
error                : 

Nonterminals, with rules where they appear

abstract_declarator  : 150 155 159
additive_expression  : 34 35 36 37 38
and_expression       : 48 49 50
argument_expression_list : 8 14
assignment_expression : 13 14 60 72 73 168
assignment_operator  : 60
cast_expression      : 18 28 29 30 31 32
compound_statement   : 174 208 209 210 211
conditional_expression : 58 59 74
constant_expression  : 119 120 127 134 161 163 180
declaration          : 186 187 207
declaration_list     : 184 185 187 208 210
declaration_specifiers : 75 76 78 80 82 149 150 151 208 209
declarator           : 85 86 118 120 133 149 208 209 210 211
direct_abstract_declarator : 157 158 162 163 166 167
direct_declarator    : 130 131 134 135 136 137 138
enum_specifier       : 103
enumerator           : 124 125
enumerator_list      : 121 122 125
equality_expression  : 45 46 47 48
exclusive_or_expression : 50 51 52
expression           : 4 6 58 73 191 192 193 194 195 196 198 203
expression_statement : 175 197 197 198 198
external_declaration : 204 205
function_definition  : 206
identifier_list      : 137 153
inclusive_or_expression : 52 53 54
init_declarator      : 83 84
init_declarator_list : 76 84
initializer          : 86 171 172
initializer_list     : 169 170 172
iteration_statement  : 177
jump_statement       : 178
labeled_statement    : 173
logical_and_expression : 54 55 56
logical_or_expression : 56 57 58
multiplicative_expression : 30 31 32 33 34 35
parameter_declaration : 147 148
parameter_list       : 145 146 148
parameter_type_list  : 136 165 167
pointer              : 130 141 142 156 158
postfix_expression   : 6 7 8 9 10 11 12 15
primary_expression   : 5
relational_expression : 40 41 42 43 44 45 46
selection_statement  : 176
shift_expression     : 37 38 39 40 41 42 43
specifier_qualifier_list : 111 112 114 154 155
statement            : 179 180 181 188 189 192 193 193 194 195 196 197 198
statement_list       : 183 185 189
storage_class_specifier : 77 78
struct_declaration   : 109 110
struct_declaration_list : 104 105 110
struct_declarator    : 116 117
struct_declarator_list : 111 117
struct_or_union      : 104 105 106
struct_or_union_specifier : 102
translation_unit     : 205 0
type_name            : 20 28
type_qualifier       : 81 82 114 115 143 144
type_qualifier_list  : 140 142 144
type_specifier       : 79 80 112 113
unary_expression     : 16 17 19 27 60
unary_operator       : 18

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (204) translation_unit -> . external_declaration
    (205) translation_unit -> . translation_unit external_declaration
    (206) external_declaration -> . function_definition
    (207) external_declaration -> . declaration
    (208) function_definition -> . declaration_specifiers declarator declaration_list compound_statement
    (209) function_definition -> . declaration_specifiers declarator compound_statement
    (210) function_definition -> . declarator declaration_list compound_statement
    (211) function_definition -> . declarator compound_statement
    (75) declaration -> . declaration_specifiers SEMICOLON
    (76) declaration -> . declaration_specifiers init_declarator_list SEMICOLON
    (77) declaration_specifiers -> . storage_class_specifier
    (78) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (79) declaration_specifiers -> . type_specifier
    (80) declaration_specifiers -> . type_specifier declaration_specifiers
    (81) declaration_specifiers -> . type_qualifier
    (82) declaration_specifiers -> . type_qualifier declaration_specifiers
    (130) declarator -> . pointer direct_declarator
    (131) declarator -> . direct_declarator
    (87) storage_class_specifier -> . TYPEDEF
    (88) storage_class_specifier -> . EXTERN
    (89) storage_class_specifier -> . STATIC
    (90) storage_class_specifier -> . AUTO
    (91) storage_class_specifier -> . REGISTER
    (92) type_specifier -> . VOID
    (93) type_specifier -> . CHAR
    (94) type_specifier -> . SHORT
    (95) type_specifier -> . INT
    (96) type_specifier -> . LONG
    (97) type_specifier -> . BOOL
    (98) type_specifier -> . FLOAT
    (99) type_specifier -> . DOUBLE
    (100) type_specifier -> . SIGNED
    (101) type_specifier -> . UNSIGNED
    (102) type_specifier -> . struct_or_union_specifier
    (103) type_specifier -> . enum_specifier
    (128) type_qualifier -> . CONST
    (129) type_qualifier -> . VOLATILE
    (139) pointer -> . TIMES
    (140) pointer -> . TIMES type_qualifier_list
    (141) pointer -> . TIMES pointer
    (142) pointer -> . TIMES type_qualifier_list pointer
    (132) direct_declarator -> . IDENTIFIER
    (133) direct_declarator -> . L_BRACKET declarator R_BRACKET
    (134) direct_declarator -> . direct_declarator L_HOOK constant_expression R_HOOK
    (135) direct_declarator -> . direct_declarator L_HOOK R_HOOK
    (136) direct_declarator -> . direct_declarator L_BRACKET parameter_type_list R_BRACKET
    (137) direct_declarator -> . direct_declarator L_BRACKET identifier_list R_BRACKET
    (138) direct_declarator -> . direct_declarator L_BRACKET R_BRACKET
    (104) struct_or_union_specifier -> . struct_or_union IDENTIFIER L_BRACE struct_declaration_list R_BRACE
    (105) struct_or_union_specifier -> . struct_or_union L_BRACE struct_declaration_list R_BRACE
    (106) struct_or_union_specifier -> . struct_or_union IDENTIFIER
    (121) enum_specifier -> . ENUM L_BRACE enumerator_list R_BRACE
    (122) enum_specifier -> . ENUM IDENTIFIER L_BRACE enumerator_list R_BRACE
    (123) enum_specifier -> . ENUM IDENTIFIER
    (107) struct_or_union -> . STRUCT
    (108) struct_or_union -> . UNION

    TYPEDEF         shift and go to state 26
    EXTERN          shift and go to state 9
    STATIC          shift and go to state 16
    AUTO            shift and go to state 7
    REGISTER        shift and go to state 6
    VOID            shift and go to state 21
    CHAR            shift and go to state 15
    SHORT           shift and go to state 31
    INT             shift and go to state 8
    LONG            shift and go to state 12
    BOOL            shift and go to state 5
    FLOAT           shift and go to state 19
    DOUBLE          shift and go to state 32
    SIGNED          shift and go to state 13
    UNSIGNED        shift and go to state 33
    CONST           shift and go to state 18
    VOLATILE        shift and go to state 25
    TIMES           shift and go to state 10
    IDENTIFIER      shift and go to state 35
    L_BRACKET       shift and go to state 14
    ENUM            shift and go to state 36
    STRUCT          shift and go to state 30
    UNION           shift and go to state 3

    function_definition            shift and go to state 1
    declaration_specifiers         shift and go to state 4
    type_qualifier                 shift and go to state 20
    struct_or_union                shift and go to state 34
    storage_class_specifier        shift and go to state 22
    declaration                    shift and go to state 2
    pointer                        shift and go to state 23
    type_specifier                 shift and go to state 24
    enum_specifier                 shift and go to state 27
    external_declaration           shift and go to state 28
    direct_declarator              shift and go to state 29
    declarator                     shift and go to state 11
    translation_unit               shift and go to state 37
    struct_or_union_specifier      shift and go to state 17

state 1

    (206) external_declaration -> function_definition .

    TYPEDEF         reduce using rule 206 (external_declaration -> function_definition .)
    EXTERN          reduce using rule 206 (external_declaration -> function_definition .)
    STATIC          reduce using rule 206 (external_declaration -> function_definition .)
    AUTO            reduce using rule 206 (external_declaration -> function_definition .)
    REGISTER        reduce using rule 206 (external_declaration -> function_definition .)
    VOID            reduce using rule 206 (external_declaration -> function_definition .)
    CHAR            reduce using rule 206 (external_declaration -> function_definition .)
    SHORT           reduce using rule 206 (external_declaration -> function_definition .)
    INT             reduce using rule 206 (external_declaration -> function_definition .)
    LONG            reduce using rule 206 (external_declaration -> function_definition .)
    BOOL            reduce using rule 206 (external_declaration -> function_definition .)
    FLOAT           reduce using rule 206 (external_declaration -> function_definition .)
    DOUBLE          reduce using rule 206 (external_declaration -> function_definition .)
    SIGNED          reduce using rule 206 (external_declaration -> function_definition .)
    UNSIGNED        reduce using rule 206 (external_declaration -> function_definition .)
    CONST           reduce using rule 206 (external_declaration -> function_definition .)
    VOLATILE        reduce using rule 206 (external_declaration -> function_definition .)
    TIMES           reduce using rule 206 (external_declaration -> function_definition .)
    IDENTIFIER      reduce using rule 206 (external_declaration -> function_definition .)
    L_BRACKET       reduce using rule 206 (external_declaration -> function_definition .)
    ENUM            reduce using rule 206 (external_declaration -> function_definition .)
    STRUCT          reduce using rule 206 (external_declaration -> function_definition .)
    UNION           reduce using rule 206 (external_declaration -> function_definition .)
    $end            reduce using rule 206 (external_declaration -> function_definition .)


state 2

    (207) external_declaration -> declaration .

    TYPEDEF         reduce using rule 207 (external_declaration -> declaration .)
    EXTERN          reduce using rule 207 (external_declaration -> declaration .)
    STATIC          reduce using rule 207 (external_declaration -> declaration .)
    AUTO            reduce using rule 207 (external_declaration -> declaration .)
    REGISTER        reduce using rule 207 (external_declaration -> declaration .)
    VOID            reduce using rule 207 (external_declaration -> declaration .)
    CHAR            reduce using rule 207 (external_declaration -> declaration .)
    SHORT           reduce using rule 207 (external_declaration -> declaration .)
    INT             reduce using rule 207 (external_declaration -> declaration .)
    LONG            reduce using rule 207 (external_declaration -> declaration .)
    BOOL            reduce using rule 207 (external_declaration -> declaration .)
    FLOAT           reduce using rule 207 (external_declaration -> declaration .)
    DOUBLE          reduce using rule 207 (external_declaration -> declaration .)
    SIGNED          reduce using rule 207 (external_declaration -> declaration .)
    UNSIGNED        reduce using rule 207 (external_declaration -> declaration .)
    CONST           reduce using rule 207 (external_declaration -> declaration .)
    VOLATILE        reduce using rule 207 (external_declaration -> declaration .)
    TIMES           reduce using rule 207 (external_declaration -> declaration .)
    IDENTIFIER      reduce using rule 207 (external_declaration -> declaration .)
    L_BRACKET       reduce using rule 207 (external_declaration -> declaration .)
    ENUM            reduce using rule 207 (external_declaration -> declaration .)
    STRUCT          reduce using rule 207 (external_declaration -> declaration .)
    UNION           reduce using rule 207 (external_declaration -> declaration .)
    $end            reduce using rule 207 (external_declaration -> declaration .)


state 3

    (108) struct_or_union -> UNION .

    IDENTIFIER      reduce using rule 108 (struct_or_union -> UNION .)
    L_BRACE         reduce using rule 108 (struct_or_union -> UNION .)


state 4

    (208) function_definition -> declaration_specifiers . declarator declaration_list compound_statement
    (209) function_definition -> declaration_specifiers . declarator compound_statement
    (75) declaration -> declaration_specifiers . SEMICOLON
    (76) declaration -> declaration_specifiers . init_declarator_list SEMICOLON
    (130) declarator -> . pointer direct_declarator
    (131) declarator -> . direct_declarator
    (83) init_declarator_list -> . init_declarator
    (84) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (139) pointer -> . TIMES
    (140) pointer -> . TIMES type_qualifier_list
    (141) pointer -> . TIMES pointer
    (142) pointer -> . TIMES type_qualifier_list pointer
    (132) direct_declarator -> . IDENTIFIER
    (133) direct_declarator -> . L_BRACKET declarator R_BRACKET
    (134) direct_declarator -> . direct_declarator L_HOOK constant_expression R_HOOK
    (135) direct_declarator -> . direct_declarator L_HOOK R_HOOK
    (136) direct_declarator -> . direct_declarator L_BRACKET parameter_type_list R_BRACKET
    (137) direct_declarator -> . direct_declarator L_BRACKET identifier_list R_BRACKET
    (138) direct_declarator -> . direct_declarator L_BRACKET R_BRACKET
    (85) init_declarator -> . declarator
    (86) init_declarator -> . declarator EQUALS initializer

    SEMICOLON       shift and go to state 38
    TIMES           shift and go to state 10
    IDENTIFIER      shift and go to state 35
    L_BRACKET       shift and go to state 14

    init_declarator                shift and go to state 40
    direct_declarator              shift and go to state 29
    declarator                     shift and go to state 41
    pointer                        shift and go to state 23
    init_declarator_list           shift and go to state 39

state 5

    (97) type_specifier -> BOOL .

    TYPEDEF         reduce using rule 97 (type_specifier -> BOOL .)
    EXTERN          reduce using rule 97 (type_specifier -> BOOL .)
    STATIC          reduce using rule 97 (type_specifier -> BOOL .)
    AUTO            reduce using rule 97 (type_specifier -> BOOL .)
    REGISTER        reduce using rule 97 (type_specifier -> BOOL .)
    VOID            reduce using rule 97 (type_specifier -> BOOL .)
    CHAR            reduce using rule 97 (type_specifier -> BOOL .)
    SHORT           reduce using rule 97 (type_specifier -> BOOL .)
    INT             reduce using rule 97 (type_specifier -> BOOL .)
    LONG            reduce using rule 97 (type_specifier -> BOOL .)
    BOOL            reduce using rule 97 (type_specifier -> BOOL .)
    FLOAT           reduce using rule 97 (type_specifier -> BOOL .)
    DOUBLE          reduce using rule 97 (type_specifier -> BOOL .)
    SIGNED          reduce using rule 97 (type_specifier -> BOOL .)
    UNSIGNED        reduce using rule 97 (type_specifier -> BOOL .)
    CONST           reduce using rule 97 (type_specifier -> BOOL .)
    VOLATILE        reduce using rule 97 (type_specifier -> BOOL .)
    ENUM            reduce using rule 97 (type_specifier -> BOOL .)
    STRUCT          reduce using rule 97 (type_specifier -> BOOL .)
    UNION           reduce using rule 97 (type_specifier -> BOOL .)
    TIMES           reduce using rule 97 (type_specifier -> BOOL .)
    IDENTIFIER      reduce using rule 97 (type_specifier -> BOOL .)
    L_BRACKET       reduce using rule 97 (type_specifier -> BOOL .)
    L_HOOK          reduce using rule 97 (type_specifier -> BOOL .)
    COMMA           reduce using rule 97 (type_specifier -> BOOL .)
    R_BRACKET       reduce using rule 97 (type_specifier -> BOOL .)
    SEMICOLON       reduce using rule 97 (type_specifier -> BOOL .)
    COLON           reduce using rule 97 (type_specifier -> BOOL .)


state 6

    (91) storage_class_specifier -> REGISTER .

    TYPEDEF         reduce using rule 91 (storage_class_specifier -> REGISTER .)
    EXTERN          reduce using rule 91 (storage_class_specifier -> REGISTER .)
    STATIC          reduce using rule 91 (storage_class_specifier -> REGISTER .)
    AUTO            reduce using rule 91 (storage_class_specifier -> REGISTER .)
    REGISTER        reduce using rule 91 (storage_class_specifier -> REGISTER .)
    VOID            reduce using rule 91 (storage_class_specifier -> REGISTER .)
    CHAR            reduce using rule 91 (storage_class_specifier -> REGISTER .)
    SHORT           reduce using rule 91 (storage_class_specifier -> REGISTER .)
    INT             reduce using rule 91 (storage_class_specifier -> REGISTER .)
    LONG            reduce using rule 91 (storage_class_specifier -> REGISTER .)
    BOOL            reduce using rule 91 (storage_class_specifier -> REGISTER .)
    FLOAT           reduce using rule 91 (storage_class_specifier -> REGISTER .)
    DOUBLE          reduce using rule 91 (storage_class_specifier -> REGISTER .)
    SIGNED          reduce using rule 91 (storage_class_specifier -> REGISTER .)
    UNSIGNED        reduce using rule 91 (storage_class_specifier -> REGISTER .)
    CONST           reduce using rule 91 (storage_class_specifier -> REGISTER .)
    VOLATILE        reduce using rule 91 (storage_class_specifier -> REGISTER .)
    ENUM            reduce using rule 91 (storage_class_specifier -> REGISTER .)
    STRUCT          reduce using rule 91 (storage_class_specifier -> REGISTER .)
    UNION           reduce using rule 91 (storage_class_specifier -> REGISTER .)
    SEMICOLON       reduce using rule 91 (storage_class_specifier -> REGISTER .)
    TIMES           reduce using rule 91 (storage_class_specifier -> REGISTER .)
    IDENTIFIER      reduce using rule 91 (storage_class_specifier -> REGISTER .)
    L_BRACKET       reduce using rule 91 (storage_class_specifier -> REGISTER .)
    L_HOOK          reduce using rule 91 (storage_class_specifier -> REGISTER .)
    COMMA           reduce using rule 91 (storage_class_specifier -> REGISTER .)
    R_BRACKET       reduce using rule 91 (storage_class_specifier -> REGISTER .)


state 7

    (90) storage_class_specifier -> AUTO .
